objects/Release_Task__c.object
<CustomObject>
    <description>Track Bugs, Enhancement Requests, and Action Items to be resolved during the Build, Validate, Deploy and/or Post-Deployment phases.</description>
    <fields>
        <fullName>Age_in_days__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <label>Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Interest_Score__c</fullName>
        <formula>Business_Value_Score__c + Data_Accuracy_Score__c + New_Process_Score__c + Productivity_Score__c + User_Friendliness_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Interest Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value_Score__c</fullName>
        <formula>CASE(Business_Value__c, &quot;Evolution requested has a negative impact&quot;, -20, &quot;Positive impact on business value&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No impact</fullName>
                    <default>true</default>
                    <label>No impact</label>
                </value>
                <value>
                    <fullName>Evolution requested has a negative impact</fullName>
                </value>
                <value>
                    <fullName>Positive impact on business value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>CASE(Status__c  , 
&quot;Closed (Duplicate)&quot;, &quot;True&quot;,
&quot;Closed (Working As Designed)&quot;, &quot;True&quot;,
&quot;Closed (Question Answered)&quot;, &quot;True&quot;,
&quot;Closed (Verified)&quot;,&quot;True&quot;,
&quot;Closed (Not An Issue)&quot;,&quot;True&quot;,
&quot;False&quot;)</formula>
        <label>Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_needed__c</fullName>
        <label>Communication needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Page Communication</fullName>
                </value>
                <value>
                    <fullName>Training Webinar</fullName>
                </value>
                <value>
                    <fullName>End User Documentation Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Workitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy_Score__c</fullName>
        <formula>CASE(Data_Accuracy__c, &quot;Evolution requested has a negative impact on data quality&quot;, -20, &quot;Reduces risk of error on a importance information (example : direct link with cost or revenue)&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Accuracy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy__c</fullName>
        <label>Data Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not relevant</fullName>
                    <default>true</default>
                    <label>Not relevant</label>
                </value>
                <value>
                    <fullName>Evolution requested has a negative impact on data quality</fullName>
                </value>
                <value>
                    <fullName>Reduces risk of error on a importance information (example : direct link with cost or revenue)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Derived_Urgency__c</fullName>
        <label>Derived Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low (Nice to have)</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Comments__c</fullName>
        <label>Design Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Impact__c</fullName>
        <label>Design Impact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Communication to Design Team</fullName>
                </value>
                <value>
                    <fullName>Gap Analysis with Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Component__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Account Team</fullName>
                </value>
                <value>
                    <fullName>Awards &amp; Compliments</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>HCM Employee</fullName>
                </value>
                <value>
                    <fullName>Informal Quote</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Opportunity Program</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Security Settings</fullName>
                </value>
                <value>
                    <fullName>Team Room</fullName>
                </value>
                <value>
                    <fullName>CPQ Approval Process</fullName>
                </value>
                <value>
                    <fullName>CPQ Browse Catalog</fullName>
                </value>
                <value>
                    <fullName>CPQ Configure Product</fullName>
                </value>
                <value>
                    <fullName>CPQ Creating Proposal</fullName>
                </value>
                <value>
                    <fullName>CPQ Data</fullName>
                </value>
                <value>
                    <fullName>CPQ Generate Proposal</fullName>
                </value>
                <value>
                    <fullName>CPQ New IP Request</fullName>
                </value>
                <value>
                    <fullName>CPQ PDK Option</fullName>
                </value>
                <value>
                    <fullName>CPQ Process Option</fullName>
                </value>
                <value>
                    <fullName>CPQ Comparison</fullName>
                </value>
                <value>
                    <fullName>CPQ View Details</fullName>
                </value>
                <value>
                    <fullName>GMPL &amp; BX009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_Bug_Enhancement_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Bug/Enhancement Number</label>
        <referenceTo>Release_Task__c</referenceTo>
        <relationshipLabel>Release Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Notifications__c</fullName>
        <description>Additional email address or distribution list to receive updates on this task</description>
        <inlineHelpText>Additional email address or distribution list to receive updates on this task</inlineHelpText>
        <label>Email Notifications</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enhancement_Objective__c</fullName>
        <label>Enhancement Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <defaultValue>TODAY() + 2</defaultValue>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fix_Verified_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that verified the bug fix</description>
        <label>Fix Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Impact_Analysis__c</fullName>
        <label>Functional Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Score__c</fullName>
        <formula>Business_Interest_Score__c * User_or_Group_Impacted_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Business Interest Score) x (Scope of Change Impact Score)</inlineHelpText>
        <label>Global Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Details__c</fullName>
        <label>Impact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOE_Hours__c</fullName>
        <label>LOE (Hours)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 1 hour</fullName>
                </value>
                <value>
                    <fullName>1 to 8 hours</fullName>
                </value>
                <value>
                    <fullName>8+ to 16 hours</fullName>
                </value>
                <value>
                    <fullName>16+ to 40 hours</fullName>
                </value>
                <value>
                    <fullName>40+ to 160 hours</fullName>
                </value>
                <value>
                    <fullName>&gt; 160 hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Process_Score__c</fullName>
        <formula>CASE( New_Process__c , &quot;High impact&quot;, 10, &quot;Low impact &quot;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Process Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Process__c</fullName>
        <label>New Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not relevant</fullName>
                    <default>true</default>
                    <label>Not relevant</label>
                </value>
                <value>
                    <fullName>Low impact</fullName>
                </value>
                <value>
                    <fullName>High impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peripheral_Application_Impact__c</fullName>
        <label>Peripheral Application Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority/Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Productivity_Score__c</fullName>
        <formula>CASE( Productivity__c , &quot;Evolution requested has a negative impact on productivity&quot;, -20, &quot;Functional response time or process duration reduced&quot;, 10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <label>Productivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not relevant</fullName>
                    <default>true</default>
                    <label>Not relevant</label>
                </value>
                <value>
                    <fullName>Evolution requested has a negative impact on productivity</fullName>
                </value>
                <value>
                    <fullName>Functional response time or process duration reduced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Raised_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the original requester?</inlineHelpText>
        <label>Raised by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Release Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New (unassigned)</fullName>
                    <color>#FF0000</color>
                    <default>true</default>
                    <label>New (unassigned)</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#FF9900</color>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>In Review / In Progress</fullName>
                    <color>#FFFF66</color>
                    <label>In Review / In Progress</label>
                </value>
                <value>
                    <fullName>Fix Needed</fullName>
                    <color>#FF0000</color>
                    <label>Fix Needed</label>
                </value>
                <value>
                    <fullName>Ready for SIT</fullName>
                </value>
                <value>
                    <fullName>Work Complete</fullName>
                    <color>#FFFF66</color>
                    <label>Work Complete</label>
                </value>
                <value>
                    <fullName>Ready for SME SIT</fullName>
                </value>
                <value>
                    <fullName>Test in Progress</fullName>
                    <color>#FFFF66</color>
                    <label>Test in Progress</label>
                </value>
                <value>
                    <fullName>SIT Complete</fullName>
                </value>
                <value>
                    <fullName>Re-Open</fullName>
                    <color>#FF0000</color>
                    <label>Re-Open</label>
                </value>
                <value>
                    <fullName>Ready for UAT</fullName>
                </value>
                <value>
                    <fullName>Ready for Production</fullName>
                </value>
                <value>
                    <fullName>Closed (Duplicate)</fullName>
                    <color>#009900</color>
                    <label>Closed (Duplicate)</label>
                </value>
                <value>
                    <fullName>Closed (Working As Designed)</fullName>
                    <color>#009900</color>
                    <label>Closed (Working As Designed)</label>
                </value>
                <value>
                    <fullName>Closed (Question Answered)</fullName>
                    <color>#009900</color>
                    <label>Closed (Question Answered)</label>
                </value>
                <value>
                    <fullName>Closed (Verified)</fullName>
                    <color>#009900</color>
                    <label>Closed (Verified)</label>
                </value>
                <value>
                    <fullName>Closed (Not An Issue)</fullName>
                    <color>#009900</color>
                    <label>Closed (Not An Issue)</label>
                </value>
                <value>
                    <fullName>Reject to Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Area__c</fullName>
        <label>system Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>Apttus CPQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Impact_Analysis__c</fullName>
        <label>Technical Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The test log failure related to this issue</description>
        <label>Test Log</label>
        <referenceTo>Test_Log__c</referenceTo>
        <relationshipLabel>Release Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script</label>
        <referenceTo>Test_Scripts__c</referenceTo>
        <relationshipLabel>Release Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                    <color>#FF0000</color>
                    <default>true</default>
                    <label>Bug</label>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>User Management</fullName>
                </value>
                <value>
                    <fullName>Admin Request</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Product Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Friendliness_Score__c</fullName>
        <formula>CASE( User_Friendliness__c , &quot;Evolution requested has a negative impact on user friendliness&quot;, -20, &quot;Positive impact on user friendliness&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Friendliness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Friendliness__c</fullName>
        <label>User Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not relevant</fullName>
                    <default>true</default>
                    <label>Not relevant</label>
                </value>
                <value>
                    <fullName>Evolution requested has a negative impact on user friendliness</fullName>
                </value>
                <value>
                    <fullName>Positive impact on user friendliness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Interface_Impact_Analysis__c</fullName>
        <label>User Interface Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted_Score__c</fullName>
        <formula>CASE(User_or_Group_Impacted__c , &quot;Business Unit&quot;, 1, &quot;Country&quot;, 5, &quot;Region&quot;,5, &quot;All&quot;, 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User or Group Impacted Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted__c</fullName>
        <description>Which user or group is affected by the request</description>
        <inlineHelpText>Which user or group is affected by the request</inlineHelpText>
        <label>User or Group Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business Unit</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not relevant</fullName>
                    <default>true</default>
                    <label>Not relevant</label>
                </value>
                <value>
                    <fullName>Existing satisfactory alternative method</fullName>
                </value>
                <value>
                    <fullName>Reasonable workaround (effort to make it happen)</fullName>
                </value>
                <value>
                    <fullName>Difficult workaround (effort to make it happen)</fullName>
                </value>
                <value>
                    <fullName>No alternative or unacceptable alternative method</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release Task</label>
    <listViews>
        <fullName>All_On_Hold_bugs</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Resolution__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Raised_by__c</columns>
        <columns>Development_Component__c</columns>
        <columns>Priority__c</columns>
        <columns>Task_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>On Hold</value>
        </filters>
        <label>All On Hold  bugs</label>
    </listViews>
    <listViews>
        <fullName>All_Open_bugs</fullName>
        <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Development_Component__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Raised_by__c</columns>
        <columns>Priority__c</columns>
        <columns>Task_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>New (unassigned),In Review / In Progress,Fix Needed,Work Complete</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Test in Progress,Re-Open,Ready for UAT,Ready for Production</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Reject to Verify</value>
        </filters>
        <label>All Open bugs</label>
    </listViews>
    <listViews>
        <fullName>All_Open_deployment</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Development_Component__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Raised_by__c</columns>
        <columns>Priority__c</columns>
        <columns>Task_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deployment</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Close</value>
        </filters>
        <label>Open Deployment Request</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Project_Open</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Task_Area__c</columns>
        <columns>Expected_Close_Date__c</columns>
        <columns>Fix_Verified_By_User__c</columns>
        <columns>Development_Component__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>CPQ Project</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New (unassigned),On Hold,In Review / In Progress,Fix Needed,Work Complete</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Test in Progress,Re-Open,Ready for UAT,Ready for Production,Reject to Verify</value>
        </filters>
        <label>CPQ Project Open</label>
    </listViews>
    <listViews>
        <fullName>CPQ_UAT_IssueList</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>startsWith</operation>
            <value>UAT</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>CPQ Project</value>
        </filters>
        <label>CPQ_UAT_IssueList</label>
    </listViews>
    <listViews>
        <fullName>CRM_Device_Migration_UAT</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Subject__c</columns>
        <columns>Development_Component__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Task_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>CRM Device Migration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Test in Progress,Ready for UAT</value>
        </filters>
        <label>CRM Device Migration - For UAT</label>
    </listViews>
    <listViews>
        <fullName>CatalogConfigurator</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Raised_by__c</columns>
        <columns>Priority__c</columns>
        <columns>Resolution__c</columns>
        <columns>Steps_to_Reproduce__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>CPQ Project</value>
        </filters>
        <label>CatalogConfiguratorSITDefects</label>
    </listViews>
    <listViews>
        <fullName>Fixed_After_Phase_0_Deployment</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Development_Component__c</columns>
        <columns>Priority__c</columns>
        <columns>Task_Area__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Verified)</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Phase 0 CRM - Deployment</value>
        </filters>
        <label>Fixed After Phase 0 Deployment</label>
    </listViews>
    <listViews>
        <fullName>Fixed_After_Phase_0_Release</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Development_Component__c</columns>
        <columns>Priority__c</columns>
        <columns>Task_Area__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Verified)</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>12/10/2012 12:00 AM</value>
        </filters>
        <label>Fixed After Phase 0 Release</label>
    </listViews>
</CustomObject>